[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gleam-scraper"
version = "0.1.0"
description = "A CLI tool to scrape and display gleam.io giveaways with interactive browser integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "William Vandergraaf"},
]

dependencies = [
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=0.20.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.30",
    "click>=8.1.0",
    "typer>=0.9.0",
    "playwright>=1.53.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
gleam-scraper = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
